--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="color_happy">#F6E5D8</color>
-    <color name="color_angry">#F66767</color>
+    <color name="color_angry">#E8A5A5</color>
     <color name="color_scared">#AC8DAF</color>
     <color name="color_sad">#005580</color>
     <color name="color_disgusted">#85ADAD</color>
