--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -102,8 +102,8 @@
 
     <LinearLayout
         android:id="@+id/TextLinearLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="425dp"
+        android:layout_height="18dp"
         android:orientation="horizontal"
         android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -231,8 +231,8 @@
 
     <RelativeLayout
         android:id="@+id/timeInputLayout"
-        android:layout_width="166dp"
-        android:layout_height="53dp"
+        android:layout_width="167dp"
+        android:layout_height="38dp"
         app:layout_constraintEnd_toEndOf="@+id/emotionRadioGroup"
         app:layout_constraintTop_toBottomOf="@+id/TextLinearLayout">
 
@@ -249,6 +249,7 @@
 
         <EditText
             android:id="@+id/timeEditText"
+            style="@style/WhiteText"
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:layout_alignTop="@+id/timeText"
@@ -264,15 +265,14 @@
             android:focusable="false"
             android:gravity="center"
             android:inputType="date"
-            style="@style/WhiteText"
-            android:textSize="15dp"/>
+            android:textSize="15dp" />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/dateInputLayout"
-        android:layout_width="166dp"
-        android:layout_height="53dp"
+        android:layout_width="170dp"
+        android:layout_height="39dp"
         app:layout_constraintStart_toStartOf="@+id/emotionRadioGroup"
         app:layout_constraintTop_toBottomOf="@+id/TextLinearLayout">
 
@@ -289,6 +289,7 @@
 
         <EditText
             android:id="@+id/dateEditText"
+            style="@style/WhiteText"
             android:layout_width="wrap_content"
             android:layout_height="33dp"
             android:layout_alignTop="@+id/dateText"
@@ -304,8 +305,7 @@
             android:focusable="false"
             android:gravity="center"
             android:inputType="date"
-            style="@style/WhiteText"
-            android:textSize="15dp"/>
+            android:textSize="15dp" />
 
     </RelativeLayout>
 
@@ -321,6 +321,43 @@
         app:layout_constraintStart_toStartOf="@+id/dateInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/dateInputLayout"
         app:srcCompat="@drawable/add_picture_button" />
+
+    <RelativeLayout
+        android:id="@+id/socialSpinnerLayout"
+        android:layout_width="422dp"
+        android:layout_height="51dp"
+        android:layout_weight="0"
+        android:paddingTop="0dp"
+        app:layout_constraintEnd_toEndOf="@+id/emotionRadioGroup"
+        app:layout_constraintStart_toStartOf="@+id/emotionRadioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/description_edittext">
+
+        <Spinner
+            android:id="@+id/social_spinner"
+            android:layout_width="408dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@null"
+            android:baselineAligned="false"
+            android:dropDownVerticalOffset="15dp"
+            android:overlapAnchor="false"
+            android:popupBackground="@color/transparent_background"
+            android:spinnerMode="dropdown"/>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:scaleY="0.7"
+            android:src="@drawable/spinner_bar" />
+
+    </RelativeLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
