--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -207,19 +207,29 @@
             </RelativeLayout>
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/addPictureButton"
-            android:layout_width="wrap_content"
-            android:layout_height="250dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:adjustViewBounds="true"
-            android:background="@null"
-            android:scaleType="centerInside"
-            android:scaleX="1"
-            android:src="@drawable/add_picture_button"
-            android:tint="@drawable/button_pressed" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/addPictureButton"
+                android:layout_width="wrap_content"
+                android:layout_height="250dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="8dp"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:scaleX="1"
+                android:src="@drawable/add_picture_button"
+                android:tint="@drawable/button_pressed"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <EditText
             android:id="@+id/description_edittext"
@@ -238,40 +248,40 @@
             android:textSize="16sp" />
 
         <RelativeLayout
-                android:id="@+id/locationInputLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
+            android:id="@+id/locationInputLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
 
 
             <TextView
-                    android:id="@+id/locationText"
-                    style="@style/InputButtonText"
-                    android:layout_width="85dp"
-                    android:layout_height="35dp"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/input_button_white"
-                    android:gravity="center"
-                    android:text="@string/add_post_location_button"/>
+                android:id="@+id/locationText"
+                style="@style/InputButtonText"
+                android:layout_width="85dp"
+                android:layout_height="35dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/input_button_white"
+                android:gravity="center"
+                android:text="@string/add_post_location_button"/>
 
             <EditText
-                    android:id="@+id/locationEditText"
-                    style="@style/WhiteText"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentBottom="false"
-                    android:layout_marginStart="83dp"
-                    android:layout_marginLeft="-2dp"
-                    android:layout_toRightOf="@+id/locationText"
-                    android:background="@drawable/button_right_long"
-                    android:clickable="true"
-                    android:ems="10"
-                    android:focusable="false"
-                    android:gravity="center"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    android:textSize="15dp"/>
+                android:id="@+id/locationEditText"
+                style="@style/WhiteText"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="false"
+                android:layout_marginStart="83dp"
+                android:layout_marginLeft="-2dp"
+                android:layout_toRightOf="@+id/locationText"
+                android:background="@drawable/button_right_long"
+                android:clickable="true"
+                android:ems="10"
+                android:focusable="false"
+                android:gravity="center"
+                android:inputType="text"
+                android:maxLines="1"
+                android:textSize="15dp"/>
 
         </RelativeLayout>
         <LinearLayout
@@ -353,8 +363,8 @@
 
         </RelativeLayout>
         <Space
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/navBar_distance"/>
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/navBar_distance"/>
     </LinearLayout>
 
 </ScrollView>
