--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="wrap_content"
     android:layout_width="wrap_content"
-    android:background="@drawable/background">
+    android:layout_height="wrap_content"
+    android:background="@drawable/background"
+    android:paddingBottom="@dimen/navBar_distance">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -112,7 +112,7 @@
         </RadioGroup>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
@@ -144,7 +144,7 @@
                 <EditText
                     android:id="@+id/timeEditText"
                     style="@style/WhiteText"
-                    android:layout_width="150dp"
+                    android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_alignTop="@+id/timeText"
                     android:layout_alignParentStart="true"
@@ -187,7 +187,7 @@
                 <EditText
                     android:id="@+id/dateEditText"
                     style="@style/WhiteText"
-                    android:layout_width="150dp"
+                    android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_alignTop="@+id/dateText"
                     android:layout_alignParentStart="true"
@@ -209,18 +209,18 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
 
             <ImageButton
                 android:id="@+id/addPictureButton"
                 android:layout_width="wrap_content"
-                android:layout_height="300dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="8dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:adjustViewBounds="true"
                 android:background="@null"
+                android:maxHeight="350dp"
                 android:scaleType="fitCenter"
                 android:scaleX="1"
                 android:src="@drawable/add_picture_button"
@@ -251,7 +251,9 @@
             android:id="@+id/locationInputLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="8dp">
 
 
             <TextView
@@ -262,7 +264,7 @@
                 android:layout_centerVertical="true"
                 android:background="@drawable/input_button_white"
                 android:gravity="center"
-                android:text="@string/add_post_location_button"/>
+                android:text="@string/add_post_location_button" />
 
             <EditText
                 android:id="@+id/locationEditText"
@@ -281,9 +283,10 @@
                 android:gravity="center"
                 android:inputType="text"
                 android:maxLines="1"
-                android:textSize="15dp"/>
+                android:textSize="15dp" />
 
         </RelativeLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -362,9 +365,6 @@
                 android:textColor="@drawable/button_pressed" />
 
         </RelativeLayout>
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/navBar_distance"/>
     </LinearLayout>
 
 </ScrollView>
