--- a/app/src/main/res/layout/fragment_friends_moods.xml
+++ b/app/src/main/res/layout/fragment_friends_moods.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -35,9 +36,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:layout_weight="0"
         android:paddingTop="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/mood_list_friends"
+        app:layout_constraintBottom_toTopOf="@+id/swipe_to_refresh"
         app:layout_constraintEnd_toEndOf="@+id/show_on_map_button_friends"
         app:layout_constraintStart_toStartOf="@+id/show_on_map_button_friends"
         app:layout_constraintTop_toBottomOf="@+id/show_on_map_button_friends">
@@ -71,15 +73,21 @@
 
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/mood_list_friends"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_to_refresh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="@dimen/navBar_distance"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/filterSpinnerLayoutFriends"
-        app:layout_constraintStart_toStartOf="@+id/filterSpinnerLayoutFriends"
-        app:layout_constraintTop_toBottomOf="@+id/filterSpinnerLayoutFriends" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/filterSpinnerLayoutFriends">
 
+        <ListView
+            android:id="@+id/mood_list_friends"
+            android:layout_width="match_parent"
+            android:layout_height="0dp" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
