--- a/app/src/main/res/layout/fragment_friends_moods.xml
+++ b/app/src/main/res/layout/fragment_friends_moods.xml
@@ -39,7 +39,7 @@
         android:layout_marginBottom="8dp"
         android:layout_weight="0"
         android:paddingTop="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/swipe_to_refresh"
+        app:layout_constraintBottom_toTopOf="@+id/friends_moods_refresh"
         app:layout_constraintEnd_toEndOf="@+id/show_on_map_button_friends"
         app:layout_constraintStart_toStartOf="@+id/show_on_map_button_friends"
         app:layout_constraintTop_toBottomOf="@+id/show_on_map_button_friends">
@@ -74,7 +74,7 @@
     </RelativeLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_to_refresh"
+        android:id="@+id/friends_moods_refresh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
